# pennywise

./: .gitignore  Pennywise - Expense Tracker.md  Project Requirements.docx  Project_Requirements.txt
pennywise-backend/: PROJECT_STRUCTURE.md  PYTHON_GUIDE.md  README.md  TECH_STACK.md  alembic.ini  build.sh  env.example  pyproject.toml  render.yaml  requirements.txt  run.py
pennywise-backend/alembic/: ALEMBIC_GUIDE.md  env.py
pennywise-backend/alembic/versions/: 2a1c723429f9_add_paid_by_column_to_transactions.py  58beec93f4f1_make_archived_transactions_group_id_.py  68820834ac74_initial_migration_create_users_table.py  6cac26bf9504_add_notifications_table.py  7a02de1fa524_add_archived_and_deleted_transactions_.py  876815da5299_add_oauth_fields_to_user.py  8deac54f00e1_add_group_and_transaction_tables.py  a1e999073e60_remove_archive_tables.py  c8588c6d3a0b_add_group_member_table.py
pennywise-backend/app/: __init__.py  main.py
pennywise-backend/app/constants/: ai_models.py  transactions.py
pennywise-backend/app/core/: config.py  database.py
pennywise-backend/app/models/: __init__.py  group.py  group_member.py  notification.py  transaction.py  user.py
pennywise-backend/app/schemas/: __init__.py  ai.py  auth.py  group.py  nlp.py  notification.py  transaction.py
pennywise-backend/app/services/: __init__.py  ai_service.py  archive_service.py  auth_service.py  dashboard_service.py  group_service.py  health_polling_service.py  nlp_service.py  notification_service.py  transaction_extraction_service.py  (+1 more)
pennywise-backend/tests/: __init__.py  test_main.py
(+163 files in other folders)
